# n4ctl

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: cli.rs  config.rs  device.rs  inputs.rs  main.rs  mapping.rs  power_session.rs  render.rs  service.rs  state.rs  util.rs
src/actions/: hotkey.rs  mod.rs  obs.rs  page.rs  system_volume.rs  voicemeeter.rs
