[package]
name = "n4ctl"
version = "0.1.0"
edition = "2021"
description = "Standalone controller for Mirabox N4 (keys + sensor strip + knobs)"
license = "MPL-2.0"
publish = false

[[bin]]
name = "n4ctl"
path = "src/main.rs"

# Tiny GUI-subsystem (`windows_subsystem = "windows"`) stub that spawns
# `n4ctl.exe` with `CREATE_NO_WINDOW` and waits on it. `install --mechanism
# task` points the Scheduled Task at this binary so auto-starts don't flash
# a console window. Has no effect / is a stub on non-Windows targets.
[[bin]]
name = "n4ctl-launcher"
path = "src/bin/launcher.rs"

[dependencies]
mirajazz = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-lite = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "6"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png"] }
resvg = { version = "0.47", default-features = false }
obws = { version = "0.14", features = ["events"] }
enigo = "0.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
arc-swap = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }

[target.'cfg(windows)'.dependencies]
voicemeeter = "0.4"
windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_System_LibraryLoader",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
